--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - 8086:8086
     volumes:
-      - /nitur/influxdb/influxdb.conf:/etc/influxdb/influxdb.conf
+      - ./influxdb.conf:/etc/influxdb/influxdb.conf
     environment:
       - INFLUXDB_DB=telegraf
       - INFLUXDB_USER=telegraf
@@ -30,4 +30,4 @@ services:
     links:
       - influxdb
     volumes:
-      - /nitur/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf
+      - ./telegraf.conf:/etc/telegraf/telegraf.conf
