--- a/create-vm.yml
+++ b/create-vm.yml
@@ -2,12 +2,14 @@
 - hosts: localhost
   connection: local
   tasks:
-    - community.vmware.vmware_guest:
+    - vmware_guest:
         hostname: 10.0.0.49
         username: administrator@vsphere.local
         password: 
         validate_certs: no
-        folder: /ha-datacenter/vm
+        datacenter: datacenter
+        folder: /datacenter/vm
+        cluster: cluster1
         name: test_vm_0002
         state: poweredoff
         guest_id: ubuntu64Guest
